--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" style="text/css" href="style.css">
     </head>
     <body>
-        <h1>Un Super Titre</h1>
+        <h1>Un Super Titre!</h1>
     </body>
 </html>
 
